rework train routing